# mudopdbmigration

./: .gitignore  CMakeLists.txt  README.md
MudopDB_v1/: .dockerignore  CMakeLists.txt  DEMO.md  DOCKER_PERSISTENCE_EXPLAINED.md  Dockerfile.debian  PERSISTENCE_QUICK_REFERENCE.md  PERSISTENCE_TEST.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_VOLUMES.md  README.md  README_DEMO.md  SYSTEM_TABLES_ANALYSIS.md  TEST_RESULTS_PERSISTENCE.md  test_production_persistence.sh
MudopDB_v1/src/: CMakeLists.txt  demo_persistence_reader.cpp  demo_persistence_writer.cpp  demo_phase4.cpp  main.cpp
MudopDB_v1/src/api/: connection.cpp  driver.cpp  metadata.cpp  result_set.cpp  statement.cpp
MudopDB_v1/src/app/: app.cpp
MudopDB_v1/src/buffer/: buffermgr.cpp
MudopDB_v1/src/file/: blockid.cpp  filemgr.cpp  memfilemgr.cpp  page.cpp
MudopDB_v1/src/helper/: query_update.cpp  utility.cpp
MudopDB_v1/src/index/btree/: btpage.cpp  btreedir.cpp  btreeindex.cpp  btreeleaf.cpp
MudopDB_v1/src/index/hash/: hashindex.cpp
MudopDB_v1/src/index/planner/: indexjoinplan.cpp  indexselectplan.cpp  indexupdateplanner.cpp
MudopDB_v1/src/index/query/: indexjoinscan.cpp  indexselectscan.cpp
MudopDB_v1/src/log/: logiterator.cpp  logmgr.cpp
MudopDB_v1/src/materialize/: aggregates.cpp  groupbyscan.cpp  materializeplan.cpp  mergejoinscan.cpp  recordcomparator.cpp  sortplan.cpp  sortscan.cpp  temptable.cpp
MudopDB_v1/src/metadata/: indexinfo.cpp  indexmgr.cpp  metadatamgr.cpp  statinfo.cpp  statmgr.cpp  tablemgr.cpp  viewmgr.cpp
MudopDB_v1/src/multibuffer/: bufferneeds.cpp  chunkscan.cpp  multibufferproductplan.cpp  multibufferproductscan.cpp
MudopDB_v1/src/opt/: heuristicqueryplanner.cpp  tableplanner.cpp
MudopDB_v1/src/plan/: basicupdateplanner.cpp  betterqueryplanner.cpp  optimizedproductplan.cpp  productplan.cpp  selectplan.cpp  tableplan.cpp
MudopDB_v1/src/query/: expression.cpp  predicate.cpp  productscan.cpp  projectscan.cpp  selectscan.cpp
MudopDB_v1/src/record/: recordpage.cpp  rid.cpp  schema.cpp  tablescan.cpp
MudopDB_v1/src/server/: simpledb.cpp  simpledb_server.cpp  tcp_transport.cpp
MudopDB_v1/src/tx/: bufferlist.cpp  transaction.cpp
MudopDB_v1/src/tx/concurrency/: concurrencymgr.cpp  locktable.cpp
MudopDB_v1/src/tx/recovery/: commitrecord.cpp  recoverymgr.cpp  startrecord.cpp
MudopDB_v1/tests/: CMakeLists.txt  test_app.cpp  test_app_flow.cpp  test_buffer.cpp  test_connection.cpp  test_constant.cpp  test_drivers.cpp  test_file_layer.cpp  test_inmemory.cpp  test_log_layer.cpp  test_network.cpp  test_query_update.cpp  test_recordpage.cpp  test_resultset.cpp  test_scan.cpp  test_tablescan.cpp  test_utils.cpp  test_wal.cpp
NMDB2/foo/: fldcat.tbl  tblcat.tbl
include/api/: driver.hpp  metadata.hpp  result_set.hpp
include/app/: app.hpp
include/buffer/: buffer.hpp  buffermgr.hpp
include/file/: blockid.hpp  filemgr.hpp  page.hpp
include/helper/: utility.hpp
report/: cpp_improvement_plan.md  phase3_buffer_management_detailed.md  phase4_completion_report.md  phase4_record_management_detailed.md  progress_report_migration_session_oct_2025.md  progress_report_phase1_2.md  progress_report_phase3.md  progress_report_week_21_sep_2025.md  project_migration_status_summary.md  storage_engine_architecture_overview.md  v1_v2_architecture_review.md
src/: CMakeLists.txt  main.cpp
src/api/: connection.cpp  driver.cpp  metadata.cpp  result_set.cpp  statement.cpp
src/app/: app.cpp
src/buffer/: buffer.cpp  buffermgr.cpp
src/file/: blockid.cpp  filemgr.cpp  page.cpp
src/helper/: query_update.cpp  utility.cpp
src/log/: logiterator.cpp  logmgr.cpp
src/materialize/: aggregates.cpp  groupbyplan.cpp  groupbyscan.cpp  materializeplan.cpp  mergejoinplan.cpp  mergejoinscan.cpp  recordcomparator.cpp  sortplan.cpp  sortscan.cpp  temptable.cpp
src/metadata/: metadatamgr.cpp  statinfo.cpp  statmgr.cpp  tablemgr.cpp  viewmgr.cpp
src/opt/: heuristicqueryplanner.cpp  tableplanner.cpp
src/parse/: lexer.cpp  parsedata.cpp  parser.cpp
src/plan/: basicqueryplanner.cpp  basicupdateplanner.cpp  plan.cpp  planner.cpp  productplan.cpp  projectplan.cpp  selectplan.cpp  tableplan.cpp
src/query/: constant.cpp  expression.cpp  predicate.cpp  productscan.cpp  projectscan.cpp  scan.cpp  selectscan.cpp  term.cpp
src/record/: layout.cpp  recordpage.cpp  rid.cpp  schema.cpp  tablescan.cpp
src/server/: simpledb.cpp
src/tx/: bufferlist.cpp  transaction.cpp
src/tx/concurrency/: concurrencymgr.cpp  locktable.cpp
src/tx/recovery/: checkpointrecord.cpp  commitrecord.cpp  logrecord.cpp  recoverymgr.cpp  rollbackrecord.cpp  setintrecord.cpp  setstringrecord.cpp  startrecord.cpp
tests/: CMakeLists.txt  test_buffermgr.cpp  test_connection.cpp  test_layout.cpp  test_resultset.cpp  test_rid.cpp  test_schema.cpp
(+135 files in other folders)
